2003-05-02  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/unmunge.c(main): Fixed invalid read of free'd memory.

	* src/libmunge/decode.c(decode_rsp_v1):
	  Fixed dataless cred decode to match header (ie, no data is malloc'd).
	  Fixed overwrite of returned data buffer.

2003-04-30  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.1.

	* munge.spec: Tweaked description, pre/post/preun/postun, files.

	* : Added 'distclean-local' hook via Make-inc.mk.

	* : Added startup script.

2003-04-29  Chris Dunlap  <cdunlap@llnl.gov>

	* : Fixed compiler warnings under RH62 w/o -Wall.

2003-04-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/munge.h, src/libmunge/strings.c, src/munged/enc_v1.c,
	  src/munged/lookup.c: Removed "half-mac" work-in-progress.

	* src/munge/munge.c, src/munge/unmunge.c: Tweaked "list" output.

	* src/munge/munge.c: Added c/C/m/M/z/Z cmdline opts.

	* src/munge/unmunge.c: Added t cmdline opt for setting TTL.
	  Added ENCODED, DECODED, CIPHER, MAC, ZIP metadata keys.

	* src/libmunge/munge.h, src/libmunge/ctx.c: Tweaked MUNGE_OPT_* enums.

	* src/libmunge/Makefile.am, src/libmunge/Makefile.in,
	  src/libmunge/strings.c: Added descriptive string arrays for enums.

2003-04-24  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/unmunge.c: Changed t/T cmdline opts to k/K.

2003-04-23  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/dec_v1.c: Ensured MUNGE_TTL_FOREVER never expires.

	* libcommon/munge_defs.h: Reduced credential's salt from 64b to 56b.

	* src/libmunge/decode.c, src/libmunge/encode.c, src/munged/dec_v1.c,
	  src/munged/enc_v1.c: Removed credential's TTL field.

	* : Cleanup of error propagation code.

2003-04-22  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_msg.h, src/munged/dec_v1.c, src/munged/enc_v1.c:
	  Changed cred's realm_len from uint32_t to uint8_t.

2003-04-18  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h, src/munged/conf.c:
	  Temporarily added MUNGED_RANDOM_SEED and MUNGED_SECRET_KEY defs.
