@@ -1,5 +1,5 @@
 /*****************************************************************************
- *  $Id: unmunge.c,v 1.11 2003/05/02 18:01:39 dun Exp $
+ *  $Id: unmunge.c,v 1.12 2003/05/02 19:52:02 dun Exp $
  *****************************************************************************
  *  This file is part of the Munge Uid 'N' Gid Emporium (MUNGE).
  *  For details, see <http://www.llnl.gov/linux/munge/>.
@@ -316,9 +316,10 @@ parse_cmdline (conf_t conf, int argc, char **argv)
                 display_license ();
                 exit (EMUNGE_SUCCESS);
                 break;
-//          case 'V':
-//              exit (EMUNGE_SUCCESS);
-//              break;
+            case 'V':
+                printf ("%s-%s\n", PACKAGE, VERSION);
+                exit (EMUNGE_SUCCESS);
+                break;
             case 'i':
                 conf->fn_in = optarg;
                 break;
