@@ -1,5 +1,8 @@
 2003-05-02  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munge/munge.c, src/munge/unmunge.c, src/munged/conf.c:
+	  Added V cmdline opt.
+
 	* src/munge/unmunge.c(main): Fixed invalid read of free'd memory.
 
 	* src/libmunge/decode.c(decode_rsp_v1):
